--- a/css/slider.css
+++ b/css/slider.css
@@ -39,9 +39,9 @@
     line-height: 200px;
 	color: rgba(169,3,41, 0.8);
 }
-.cb-slideshow li:nth-child(1) span { background-image: url(../images/slide/itiraflar.png) }
+.cb-slideshow li:nth-child(1) span { background-image: url(../images/slide/verda.jpg) }
 .cb-slideshow li:nth-child(2) span {
-    background-image: url(../images/slide/lise-gunlugu.png);
+    background-image: url(../images/slide/verda.jpg);
     -webkit-animation-delay: 6s;
     -moz-animation-delay: 6s;
     -o-animation-delay: 6s;
@@ -49,7 +49,7 @@
     animation-delay: 6s;
 }
 .cb-slideshow li:nth-child(3) span {
-    background-image: url(../images/slide/aydin.jpg);
+    background-image: url(../images/slide/verda.jpg);
     -webkit-animation-delay: 12s;
     -moz-animation-delay: 12s;
     -o-animation-delay: 12s;
